adding index page

--- a/double-pendulum.html
+++ b/double-pendulum.html
@@ -3,8 +3,8 @@
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.6/processing.js"></script>
   </head>
-  <body>
-    <h1>Double Pendulum Test</h1>
+  <body style="margin: 0; padding:0;">
+    <h2 style="text-align: center; margin:12px">Double Pendulum Test</h2>
     <script src="double-pendulum.js" type="application/processing" data-processing-target="pjs"></script>
     <canvas style="margin: auto" id="pjs"> </canvas>
   </body>
