--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1>Index</h1>
-    <iframe name="double-pendulum" scrolling="no" width="600" height="651" src="./double-pendulum.html"></iframe>
+    <iframe style="cursor: pointer" href="./exploring.html" name="exploring" scrolling="no" width="600" height="651" src="./exploring.html"></iframe>
   </body>
 </html>
