--- a/exploring.html
+++ b/exploring.html
@@ -4,8 +4,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.6/processing.js"></script>
   </head>
   <body style="margin: 0; padding:0;">
-    <h2 style="text-align: center; margin:12px">Double Pendulum Test</h2>
-    <script src="double-pendulum.js" type="application/processing" data-processing-target="pjs"></script>
+    <h2 style="text-align: center; margin:12px">Exploring Processing</h2>
+    <script src="exploring.js" type="application/processing" data-processing-target="pjs"></script>
     <canvas style="margin: auto" id="pjs"> </canvas>
   </body>
 </html>
